--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,16 +1,16 @@
 @import "./global.scss";
 
 .body {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: $lightMode-lightGrey;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: $lightMode-lightWhiteGrey;
 
-    .container {
-        width: 730px;
-        height: 586px;
-    }
+  .container {
+    width: 730px;
+    height: 586px;
+  }
 }
