--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,7 +5,7 @@ $lightMode-skyBlue: #0079ff;
 $lightMode-lightGrey: #697c9a;
 $lightMode-greyBlue: #4b6a9b;
 $lightMode-darkGrey: #2b3442;
-$lightMode-lightGrey: #f6f8ff;
+$lightMode-lightWhiteGrey: #f6f8ff;
 $lightMode-offWhite: #fefefe;
 
 //dark mode
