--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -1,72 +1,95 @@
 @import "global.scss";
 
 .search {
-    width: 730px;
-    height: 69px;
+  width: 730px;
+  height: 69px;
 
-    margin-top: 36px;
-    padding: 10px;
+  margin-top: 36px;
+  padding: 10px;
 
-    background-color: $lightMode-offWhite;
-    border-radius: 15px;
+  background-color: $lightMode-offWhite;
+  border-radius: 15px;
 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  position: relative;
+
+  -webkit-box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.19);
+  box-shadow: 0px 16px 30px -10px rgba(70, 96, 187, 0.19);
+
+  .left {
+    img {
+      height: 24px;
+      width: 24px;
+
+      position: absolute;
+      top: 23px;
+    }
+
+    input {
+      width: 350px;
+      height: 25px;
+      color: $lightMode-greyBlue;
+      position: absolute;
+      left: 80px;
+      bottom: 22px;
+
+      border: none;
+      font-family: $h3_font_family;
+      font-size: 18px;
+      font-weight: $h3_font_weight;
+      line-height: $h3_line_height;
+    }
+    ::placeholder {
+      color: $lightMode-greyBlue;
+      opacity: 1; /* Firefox */
+    }
+
+    :-ms-input-placeholder {
+      /* Internet Explorer 10-11 */
+      color: $lightMode-greyBlue;
+    }
+
+    ::-ms-input-placeholder {
+      /* Microsoft Edge */
+      color: $lightMode-greyBlue;
+    }
+  }
+
+  .right {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 
-    position: relative;
-
-    .left {
-        img {
-            height: 24px;
-            width: 24px;
-
-            position: absolute;
-            top: 23px;
-        }
-
-        input {
-            width: 350px;
-            height: 25px;
-            color: $lightMode-greyBlue;
-            position: absolute;
-            left: 80px;
-            bottom: 22px;
-
-            border: none;
-            font-family: $h3_font_family;
-            font-size: 18px;
-            font-weight: $h3_font_weight;
-            line-height: $h3_line_height;
-        }
-        ::placeholder {
-            color: $lightMode-greyBlue;
-            opacity: 1; /* Firefox */
-        }
-
-        :-ms-input-placeholder {
-            /* Internet Explorer 10-11 */
-            color: $lightMode-greyBlue;
-        }
-
-        ::-ms-input-placeholder {
-            /* Microsoft Edge */
-            color: $lightMode-greyBlue;
-        }
+    .noResults {
+      padding: 0;
+      margin: 0;
+      color: #f74646;
+      font-family: $h3_font_family;
+      font-size: 15px;
+      font-weight: $h3_font_weight;
+      line-height: $h3_line_height;
     }
 
     button {
-        width: 106px;
-        height: 50px;
+      width: 106px;
+      height: 50px;
 
-        color: white;
-        border: none;
-        border-radius: 10px;
-        background-color: $lightMode-skyBlue;
+      margin-left: 24px;
 
-        font-family: $h3_font_family;
-        font-size: $h3_font_size;
-        font-weight: $h3_font_weight;
-        line-height: $h3_line_height;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      background-color: $lightMode-skyBlue;
+
+      cursor: pointer;
+
+      font-family: $h3_font_family;
+      font-size: $h3_font_size;
+      font-weight: $h3_font_weight;
+      line-height: $h3_line_height;
     }
+  }
 }
